@@ -1,22 +1,25 @@
 <pre>
 <b>Note:</b> If you don't wish to appear on this list when making a donation, please tell me.
 
-* Andrew Pantyukhin
-* Ben Klemens
-* Sjoerd Siebinga
-* Cillian de Roiste
-* Miron Tewfik
+2007 (most recent donators first):
+
 * Robert Heckel
-* Stefan Krauth
-* Giuseppe Guida
-* Richard Dooling
-* Nigel McNie
-* Paulo Tanimoto
-* Nathan Saper
-* Albert Menkveld
-* Ian Taylor
-* Thomas Svensen
 * Ramana Kumar
+* Thomas Svensen
+* Ian Taylor
+* Albert Menkveld
+* Nathan Saper
+* Paulo Tanimoto
+* Nigel McNie
+* Richard Dooling
+* Giuseppe Guida
+* Stefan Krauth
+* Robert Heckel
+* Miron Tewfik
+* Cillian de Roiste
+* Sjoerd Siebinga
+* Ben Klemens
+* Andrew Pantyukhin
 
 I want to say a big <b>THANK YOU</b> for all people which supported this project in this way.
 </pre>
